# chan

./: .gitignore  vue.config.js
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/chan-config/: Cargo.toml
backend/chan-config/src/: lib.rs
backend/migrations/: 20250308121846_initial.sql
backend/src/: config.rs  macros.rs  main.rs  response.rs
backend/src/controllers/: auth.rs  boards.rs  images.rs  mod.rs  posts.rs  test.rs  threads.rs
backend/src/database/: boards.rs  images.rs  mod.rs  posts.rs  users.rs
backend/src/models/: board.rs  board_overview.rs  image.rs  mod.rs  post.rs  token.rs  user.rs  user_claims.rs
backend/src/tests/: database.rs  mod.rs  password.rs  tokens.rs
backend/src/tests/fixtures/: boards.sql  images.sql  posts.sql  users.sql
backend/src/utils/: jwt.rs  password.rs
frontend/: README.md  package-lock.json  package.json
frontend/selenium_testing/: end_to_end_test.py  sample_text.py
frontend/src/: App.vue
frontend/src/components/: board.vue  categories.vue  post.vue
