[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
argon2 = "0.5.3"
chrono = "0.4.40"
cuid2 = "0.1.4"
figment = { version = "0.10.19", features = ["toml"] }
jwt-simple = "0.12.12"
poem = { version = "3.1.7", features = ["multipart", "anyhow", "static-files"] }
poem-openapi = { version = "5.1.8", features = ["swagger-ui"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "mysql",
    "tls-rustls",
    "migrate",
] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
